# armas

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NOTES  README  README.md  TODO  abi-version.sh  bootstrap.sh  config.h.in  configure.ac  flops.txt  numbers.txt  package-version.sh
docs/: Doxyfile.m4  Makefile.am  accelerator.md  conf.py.m4  environment.md  index.rst  install.md  mainpage.dox  memory.md
src/: 00_page.dox  Doxyfile  Makefile.am  README.txt  dtype.h  internal.h  kernel.h  make-header.sh  makefile.test  matrix.h  mult.h
src/armas/: armas.h
src/base/: accel.c  armas.c  cache.c  env.c  matrix.c  matrix_ext.c  partition.c  pivot.c  pivot_ext.c  random.c  system.c  version.c
src/blas/: asum.c  axpy.c  dot.c  gemm.c  gemv.c  ger.c  iamax.c  kernel.c  madd.c  mapply.c  mcopy.c  mnorm.c  mplus.c  mscale.c  mset.c  nrm2.c  swap.c  symm.c  symv.c  syr.c  syr2.c  syr2k.c  syrk.c  trmm.c  trmm_blk.c  trmm_rec.c  trmm_unb.c  trmv.c  trsm.c  trsm_blk.c  trsm_rec.c  trsm_unb.c  trsv.c  updtrmm.c  updtrmv.c
src/blas1/: asum.c  asum_ext.c  axpy.c  axpy_ext.c  copy.c  dot.c  dot_ext.c  iamax.c  nrm2.c  scal.c  swap.c
src/blas2/: gemv.c  gemv_ext.c  ger.c  symv.c  symv_ext.c  syr.c  syr2.c  trmv.c  trmv_ext.c  trsv.c  trsv_ext.c  update_ext.c  updtrmv.c
src/blas3/: gemm.c  kernel.c  kernel_ext.c  symm.c  symm_ext.c  syr2k.c  syrk.c  syrk_ext.c  trmm.c  trmm_blk.c  trmm_ext.c  trmm_rec.c  trmm_unb.c  trsm.c  trsm_blk.c  trsm_ext.c  trsm_rec.c  trsm_unb.c  updtrm_ext.c  updtrmm.c
src/compat/: asum.c  axpy.c  copy.c  dot.c  gemm.c  gemv.c  ger.c  getrf.c  getrs.c  iamax.c  nrm2.c  posv.c  potrf.c  potrs.c  rot.c  scal.c  swap.c  symm.c  symv.c  syr.c  syr2.c  syr2k.c  syrk.c  templ.c  trmm.c  trmv.c  trsm.c  trsv.c
src/core/: armas.c  cache.c  iomm.c  json_base.c  json_file.c  json_reader.c  kernel.c  madd.c  mapply.c  matrix.c  matrix_ext.c  mdiv.c  minmax.c  mmul.c  mnorm.c  mscale.c  msub.c  partition.c  pivot.c  pivot_ext.c  plus.c  sched.c  support.c
src/eblas/: asum_ext.c  axpy_ext.c  dot_ext.c  gemm_ext.c  gemv_ext.c  ger_ext.c  kernel_ext.c  nrm2_ext.c  scale.c  sumk_ext.c  symm_ext.c  symv_ext.c  syr2_ext.c  syr_ext.c  trmm_ext.c  trmv_ext.c  trsm_ext.c  trsv_ext.c  updtrmm_ext.c
src/inc/: auxiliary.h  avxfuncs.h  chan.h  compat.h  cond.h  debug.h  dlpack.h  doxy.h  dtype.h  eft.h  eft_arm.h  eft_x86.h  eft_x86_64.h  internal.h  internal_lapack.h  kernel.h  kernel_ext.h  linalg.h  matcpy.h  matrix.h  mult.h  mult_armneon_f32.h  mult_armneon_fma_f32.h  mult_avx_c128.h  mult_avx_c64.h  mult_avx_f32.h  mult_avx_f64.h  mult_ext_avx_f64.h  mult_ext_nosimd.h  mult_fma_f32.h  mult_fma_f64.h  mult_nosimd.h  mult_sse_c128.h  mult_sse_f64.h  mvec_nosimd.h  partition.h  pivot.h  scheduler.h  simd.h  sync.h
src/include/: accel.h  armas.h  aux_avx_f64.h  cache.h  compat.h  debug.h  device.h  dlpack.h  dtype.h  eft.h  internal.h  internal_lapack.h  kernel.h  kernel_ext.h  matcpy.h  matrix.h  partition.h  pivot.h  simd.h  sparse.h  spdefs.h  vec_partition.h
src/include/arm/: eftops.h  mult_armneon_f32.h  mult_armneon_fma_f32.h  simd_ops.h
src/include/complex32/: names_base.h  names_blas.h  names_lapack.h
src/include/complex64/: names_base.h  names_blas.h  names_lapack.h
src/include/float32/: names_base.h  names_blas.h  names_compat.h  names_lapack.h  names_sparse.h
src/include/float64/: names_base.h  names_blas.h  names_compat.h  names_lapack.h  names_sparse.h
src/include/nosimd/: mult.h  mult_ext.h  mvec.h
src/include/x86_64/: eftops.h  mult_avx_c128.h  mult_avx_c64.h  mult_avx_f32.h  mult_avx_f64.h  mult_ext_avx_f32.h  mult_ext_avx_f64.h  mult_fma_c128.h  mult_fma_c64.h  mult_fma_f32.h  mult_fma_f64.h  mult_sse_c128.h  mult_sse_c64.h  mult_sse_f32.h  mult_sse_f64.h  simd_ops.h
src/io/: iomm.c  ios.c  json_base.c  json_file.c  json_reader.c  json_writer.c
src/lapack/: aux.c  auxiliary.h  bdsvd.c  bdsvd_dk.c  bdsvd_gr.c  bdsweep.c  bibld.c  bired.c  biredm.c  chol.c  cholpv.c  cholupd.c  diag.c  dqds.c  evd.c  givens.c  gvrot.h  hess.c  hessm.c  hhouse.c  house.c  housem.c  inv.c  invldl.c  invspd.c  invtrm.c  ldl.c  ldl.h  ldlbk.c  ldlbkl.c  ldlbku.c  ldlpv.c  lq.c  lqbld.c  lqmult.c  lqsolve.c  lu.c  qdroot.c  ql.c  qlbld.c  (+25 more)
src/sparse/: accum.c  add.c  cgne.c  cgnr.c  cgrad.c  convert.c  copy.c  dense.c  diag.c  gemv.c  gmres.c  icholz.c  iluz.c  io.c  mult.c  pcgrad.c  pgmres.c  sort.c  sparse.c  sparse.h  sparse_ext.c  spdefs.h  splocal.h  symv.c  trmv.c  trsv.c  util.c
src/threaded/: entry.c  gemm.c  symm.c  threaded.h  trmm.c  trsm.c
src/workers/: counter.h  entry.c  gemm.c  queue.h  scheduler.c  scheduler.h  sync.h  transient.c  workers.c  workers.h
tests/: Makefile.am  helper.c  helper.h  helper_ext.c  testing.h
tests/blas/: Makefile.am  diag.c  dot.c  gemm.c  gemv.c  ger.c  mbase.c  symm.c  symv.c  syr.c  syr2.c  syr2k.c  syrk.c  trmm.c  trmrk.c  trmv.c  trsm.c  trsv.c
tests/eblas/: Makefile.am  efttest.c  ext_axpby.c  ext_dot.c  ext_gemm.c  ext_gemv.c  ext_ger.c  ext_prec.c  ext_symm.c  ext_trmm.c  ext_trmv.c  ext_trsm.c  ext_trsv.c
tests/lapack/: Makefile.am  bdsvd.c  bidiag.c  chol.c  evd.c  gesvd.c  givens.c  hessred.c  house.c  housem.c  inv.c  invldlt.c  invspd.c  invtrm.c  ldlbk.c  ldlt.c  lqbld.c  lqfact.c  lqmult.c  lqsol.c  lu.c  qlbld.c  qlfact.c  qlmult.c  qrbld.c  qrfact.c  qrmult.c  qrsol.c  rbt.c  rqbld.c  rqfact.c  rqmult.c  secular.c  sort.c  trdevd.c  trdred.c
tests/perf/: Makefile.am  perfgemm.c  perfgemv.c  perfger.c  perfgv.c  perfgvr.c  perfsymm.c  perfsymv.c  perfsyr2.c  perftrmm.c  perftrmv.c  perftrsm.c  runperf.sh
tests/threaded/: Makefile.am  gemm.c  symm.c  trmm.c  trsm.c
tests/unit/: Makefile.am  TESTS.txt  bdsvd.c  bidiag.c  chol.c  diag.c  efttest.c  evd.c  ext_gemm.c  ext_prec.c  ext_trmm.c  ext_trsm.c  ext_trsv.c  gemm.c  gemv.c  ger.c  gesvd.c  givens.c  hessred.c  house.c  housem.c  inv.c  invldlt.c  invspd.c  invtrm.c  ldl.c  ldlbk.c  ldlt.c  lqbld.c  lqfact.c  lqmult.c  lqsol.c  lu.c  makefile.test  qlbld.c  qlfact.c  qlmult.c  qrbld.c  qrfact.c  qrmult.c  (+18 more)
texdocs/: README.md  (+19 more)
(+19 files in other folders)
